--- a/client/scss/experiences/_purdue.scss
+++ b/client/scss/experiences/_purdue.scss
@@ -38,15 +38,12 @@ $answer-color-light: #bed3e6;
     flex: 1;
     gap: sizes.$gap1rem;
     min-height: 0;
-    max-width: 100%;
-    margin: 0 auto;
 }
 
 .purdue-vector {
     flex: 1;
-    max-height: 100%;
-    min-width: 0;
-    aspect-ratio: 1/1;
+    height: 100%;
+
     border-radius: sizes.$border-radius;
     background-color: colors.$main-color-light;
     pointer-events: all;
