added a "about" page to explain the context

--- a/client/scss/_interface.scss
+++ b/client/scss/_interface.scss
@@ -4,6 +4,7 @@
 @use 'pages/buttons';
 @use 'pages/elements';
 @use 'pages/title';
+@use 'pages/about';
 @use 'pages/credits';
 @use 'pages/consent';
 @use 'pages/form';
