changed links to sharing popups on pwa

--- a/client/scss/pages/_about.scss
+++ b/client/scss/pages/_about.scss
@@ -18,6 +18,8 @@ $bottom-button-size: min(2.5rem, 10vw, 8vh);
     flex-direction: column;
     justify-content: center;
     align-items: center;
+
+    overflow: hidden;
 }
 
 .about-button-title {
